--- a/eTools Ultimate/Views/Pages/MoversPage.xaml
+++ b/eTools Ultimate/Views/Pages/MoversPage.xaml
@@ -1478,7 +1478,10 @@
                 Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
 
             <!--  Scrollable Content  -->
-            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer
+                x:Name="ContentScrollViewer"
+                Grid.Row="2"
+                VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <Grid.Style>
                         <Style TargetType="Grid">
