--- a/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
@@ -27,7 +27,7 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0" VerticalAlignment="Bottom">
@@ -42,21 +42,21 @@
                     Command="{Binding AddDropItemCommand}"
                     FontSize="16"
                     Icon="{ui:SymbolIcon Add24}"
-                    ToolTip="{i18n:StringLocalizer 'Add drop item'}" />
+                    ToolTip="{i18n:StringLocalizer 'Add item drop'}" />
                 <ui:Button
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     Command="{Binding AddDropKindCommand}"
                     FontSize="16"
                     Icon="{ui:SymbolIcon FolderAdd24}"
-                    ToolTip="{i18n:StringLocalizer 'Add drop kind'}" />
+                    ToolTip="{i18n:StringLocalizer 'Add item drops by kind'}" />
                 <ui:Button
                     Grid.Column="2"
                     Margin="10,0,0,0"
                     Command="{Binding AddDropGoldCommand}"
                     FontSize="16"
                     Icon="{ui:SymbolIcon Money24}"
-                    ToolTip="{i18n:StringLocalizer 'Add drop gold'}" />
+                    ToolTip="{i18n:StringLocalizer 'Add penyas drop'}" />
                 <ui:Button
                     Grid.Column="3"
                     Margin="10,0,0,0"
@@ -65,7 +65,7 @@
                     CommandParameter="{Binding SelectedItem, ElementName=DropListTreeView}"
                     FontSize="16"
                     Icon="{ui:SymbolIcon Delete24}"
-                    ToolTip="{i18n:StringLocalizer 'Remove item'}" />
+                    ToolTip="{i18n:StringLocalizer 'Remove selected element'}" />
             </Grid>
             <Grid
                 Grid.Column="1"
@@ -75,7 +75,17 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Max item'}" />
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <TextBlock Text="{i18n:StringLocalizer 'Max drops'}" />
+                    <ui:SymbolIcon
+                        Margin="5,0,0,0"
+                        FontSize="16"
+                        Symbol="Info20">
+                        <ui:SymbolIcon.ToolTip>
+                            <ToolTip Content="{i18n:StringLocalizer 'Maximum number of items that can drop when this mover dies.'}" />
+                        </ui:SymbolIcon.ToolTip>
+                    </ui:SymbolIcon>
+                </StackPanel>
                 <ui:NumberBox
                     Grid.Row="1"
                     Margin="0,5,0,0"
@@ -187,7 +197,7 @@
                                     <TextBlock
                                         FontWeight="SemiBold"
                                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                        Text="{Binding DropItem.Item.Name}" />
+                                        Text="{Binding DropItem.Name}" />
                                     <TextBlock
                                         FontSize="12"
                                         Foreground="{DynamicResource TextFillColorSecondaryBrush}"
@@ -228,7 +238,7 @@
                     </TreeView.Resources>
                 </TreeView>
             </Border>
-            <StackPanel Grid.Column="2" Width="200">
+            <StackPanel Grid.Column="2" Width="300">
                 <ContentControl Content="{Binding SelectedItem, ElementName=DropListTreeView}">
                     <ContentControl.Resources>
                         <DataTemplate DataType="{x:Type viewmodels:DropGoldTreeViewItem}">
@@ -238,7 +248,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Minimum'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="{i18n:StringLocalizer 'Minimum'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Minimum amount dropped'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -250,7 +270,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Maximum'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="{i18n:StringLocalizer 'Maximum'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Maximum amount dropped'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -266,7 +296,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Item'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="{i18n:StringLocalizer 'Item'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Dropped item identifier'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:AutoSuggestBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -279,7 +319,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Quantity'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="{i18n:StringLocalizer 'Quantity'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Maximum quantity dropped'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -291,7 +341,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Level'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="{i18n:StringLocalizer 'Level'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Level of the dropped item'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -304,10 +364,20 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0">
-                                        <Run Text="{i18n:StringLocalizer 'Probability'}" />
-                                        <Run Text="(%)" />
-                                    </TextBlock>
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="{i18n:StringLocalizer 'Probability'}" />
+                                            <Run Text="(%)" />
+                                        </TextBlock>
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Drop chance (in %)'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -324,7 +394,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Item kind'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="{i18n:StringLocalizer 'Item kind'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Kind of items to include. Items whose third kind does not match this value will be excluded.'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:AutoSuggestBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -337,7 +417,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Minimum rarity'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Minimum rarity'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Minimum rarity for an item to be included. This value is read-only and depends on the mover’s level.'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -349,7 +439,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Maximum rarity'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Maximum rarity'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Maximum rarity for an item to be included. This value is read-only and depends on the mover’s level.'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -365,7 +465,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Item kind'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Item kind'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Third kind of the item'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:AutoSuggestBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
@@ -379,7 +489,17 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Rarity'}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Rarity'}" />
+                                        <ui:SymbolIcon
+                                            Margin="5,0,0,0"
+                                            FontSize="16"
+                                            Symbol="Info20">
+                                            <ui:SymbolIcon.ToolTip>
+                                                <ToolTip Content="{i18n:StringLocalizer 'Rarity of the item'}" />
+                                            </ui:SymbolIcon.ToolTip>
+                                        </ui:SymbolIcon>
+                                    </StackPanel>
                                     <ui:NumberBox
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
